aquired song cards on main page, added prelimenary styling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
         <section class="main-section">
             <h2>Choose a song!</h2>
-            <div id="song-list-container">
+            <div class="song-list-container">
                 <!-- songs will go here -->
             </div>
         </section>
