--- a/detail/index.html
+++ b/detail/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- title and favicon -->
-    <title>Emo Countdown</title>
+    <title>You're so emo</title>
     <link rel="icon" type="image/x-icon" href="assets/alchemy-favicon.png" />
 
     <!-- js -->
@@ -16,21 +16,21 @@
     defer
     src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.35.7/dist/umd/supabase.min.js"
 ></script>
-    <script type="module" src="app.js"></script>
+    <script type="module" src="details.js"></script>
 
     <!-- fonts -->
     <!-- see https://fonts.google.com/ -->
 
     <!-- css -->
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="../styles/reset.css" />
+    <link rel="stylesheet" href="../styles/global.css" />
     <!-- add link for page specific css -->
 
 </head>
 
 <body>
     <header>
-        <h1></h1>
+        <a href="../">Take me Back</a>
     </header>
 
     <main>
